--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+body{
+  margin-top:30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.my-table {
+    border: solid 1px #DDEEEE;
+    border-collapse: collapse;
+    border-spacing: 0;
+    font: normal 13px Arial, sans-serif;
+    width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.my-table th, .my-table td{
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.bx{
+  margin-bottom: 30px;
+  border: 1px solid #ccc;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.bx .my-btn{
+  background: green;
+  color:#fff;
+  padding:3px;
+  float:right;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bx .my-btn:hover{
+  background-color: grey;
+}
+
+.del{
+  color:red;
+  font-weight:bold;
+  text-align:center;
+  cursor: pointer;
 }
